Day 3-Assignment(2)
CSA02- ASSIGNMENT QUESTIONS
DATE :22/03/23

1. What will be the output if you execute the following code in C?
 #include<stdio.h>
int main(){
    int arr[]={6,12,18,24};
    int x=0;
    x=arr[1]+(arr[1]=2);
    printf("%d",x);
    return 0;
}
OUTPUT:14

2. What will be the output if you execute the following code in C?
#include<stdio.h>
#include<conio.h>
void main(){
    int i=3,val;
    val=sizeof f(i)+ +f(i=1)+ +f(i-1);
    printf("%d %d",val,i);
}
int f(int num){
    return num*5;
}
OUTPUT:9 1

3. What will be the output of following c program?

#include<stdio.h>
#include<conio.h>
float avg(float,float,float);
void main(){
    float p=1,q=2,r=-2,a;
    a=avg(p,(q=4,r=-12,q),r);
    printf("%f",a);  
}
float avg(float x,float y,float z){
    return (x+y+z)/3;
}
OUTPUT:/tmp/LLfcBdsWOk.o
-2.333333

4. Predict the output or error(s) for the following program:

void main()
{
int const * p=5;
printf("%d",++(*p));
}
ERROR:
 gcc /tmp/LLfcBdsWOk.c -lm
/tmp/LLfcBdsWOk.c: In function 'main':
/tmp/LLfcBdsWOk.c:4:15: warning: initialization of 'const int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
    4 | int const * p=5;
      |               ^
/tmp/LLfcBdsWOk.c:5:1: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
    5 | printf("%d",++(*p));
      | ^~~~~~
/tmp/LLfcBdsWOk.c:1:1: note: include '<stdio.h>' or provide a declaration of 'printf'
  +++ |+#include <stdio.h>
    1 | 
/tmp/LLfcBdsWOk.c:5:1: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
    5 | printf("%d",++(*p));
      | ^~~~~~
/tmp/LLfcBdsWOk.c:5:1: note: include '<stdio.h>' or provide a declaration of 'printf'
/tmp/LLfcBdsWOk.c:5:13: error: increment of read-only location '*p'
    5 | printf("%d",++(*p));
      |             ^~

5. Predict the output or error(s) for the following program:
main()
{
int c[ ]={2.8,3.4,4,6.7,5};
int j,*p=c,*q=c;
for(j=0;j<5;j++) {
printf(" %d ",*c);
++q; }
for(j=0;j<5;j++){
printf(" %d ",*p);
++p; }
}
OUTPUT:
/tmp/LLfcBdsWOk.o
2  2  2  2  2  2  3  4  6  5 
6. Predict the output or error(s) for the following program:
main()
{
char string[]="Hello World";
display(string);
}
void display(char *string)
{
printf("%s",string);
}
OUTPUT:
/tmp/LLfcBdsWOk.o
Hello World

7. Print the following hill pattern , 
Each line contains n characters = space+number
When n=5
         1        
      12
    123
  1234
12345

8.  Find the index  of first occurrence of X in the array of N elements, if the element not present then print -1
CODING:
// C program to find first and last occurrence of
// an elements in given sorted array
#include <stdio.h>
 
// Function for finding first and last occurrence
// of an elements
void findFirstAndLast(int arr[], int n, int x)
{
    int first = -1, last = -1;
    for (int i = 0; i < n; i++) {
        if (x != arr[i])
            continue;
        if (first == -1)
            first = i;
        last = i;
    }
    if (first != -1)
        printf(
            "First Occurrence = %d \nLast Occurrence = %d",
            first, last);
    else
        printf("Not Found");
}
 
// Driver code
int main()
{
    int arr[] = { 1, 2, 2, 2, 2, 3, 4, 7, 8, 8 };
    int n = sizeof(arr) / sizeof(int);
    int x = 8;
    findFirstAndLast(arr, n, x);
    return 0;
}


9. What will be output of following c program?

#include "string.h"
typedef struct stu1{
    char name1[6];
    char name2[6];
    double marks;
}STU1;
void main(){
    STU1 s1={"rohit","kumar",87.43},*p1;
    char *p;
    p1=&s1;
    p=memchr(p1,'u',sizeof(STU1));
    printf("%s",p);  
}
OUTPUT:
umar

10. Predict the output or error(s) for the following program:
#define square(x) x*x
main()
{
int i;
i = 64/square(4);
printf("%d",i);
}
OUTPUT:
64







